Revert "review0prep"
This reverts commit 598b7191fee42615c9d4e926dddd9b9648395a28.

--- a/home.html
+++ b/home.html
@@ -105,9 +105,9 @@
                 <div class="col-sm-12 col-md-8 result">result10</div>
             </center>
         </div>
-        <div id="signin" class="page col-md-6 col-sm-12" style="display:block;">
+        <div id="signin" class="page col-md-6 col-sm-12" style="display:block">
             <center class="container">
-                <form action="" onsubmit="showpage('casualhome')" class="form-group container">
+                <form action="" class="form-group container">
                     <h3>Sign In</h3>
                     <div class="form-group col-sm-12 col-md-8"><input class="form-control" type="text" placeholder="username" ></div>
                     <div class="form-group col-sm-12 col-md-8"><input class="form-control" type="password" placeholder="password" ></div>
@@ -116,7 +116,7 @@
                 </form>
             </center>
         </div>
-        <div id="signup" class="page col-md-6 col-sm-12" style="display:block;">
+        <div id="signup" class="page col-md-6 col-sm-12" style="display:block">
             <center class="container">
                 <form action="" class="form-group container">
                     <h3>Sign Up</h3>
@@ -127,9 +127,6 @@
                     <p>Already a member ? <a href="#" onclick="showpage('signin');">Sign In</a> Here</p>
                 </form>
             </center>
-        </div>
-        <div id="casualhome" class="page col-md-6 col-sm-12" style="display:block;">
-            OLAMIGO
         </div>
     </div>
     <datalist id="states">
